data/derived/fa15/progs/unify/prog1447.ml.out
Characters 69-79:
  wwhile (helper f b,b);;
          ^^^^^^^^^^
Error: This expression has type bool * 'a
       but an expression was expected of type 'b -> 'b * bool
